--- a/tests/runner/test_config/torch/test_config_inference_single_device.yaml
+++ b/tests/runner/test_config/torch/test_config_inference_single_device.yaml
@@ -2693,3 +2693,8 @@ test_config:
   olm_ocr/image_text_generation/pytorch-olmOCR-2-7B-1025-single_device-inference:
     status: KNOWN_FAILURE_XFAIL
     reason: "Out of Memory: Not enough space to allocate 681836544 B DRAM buffer across 12 banks, where each bank needs to store 56819712 B, but bank size is 1071821792 B (allocated: 972700384 B, free: 99121408 B, largest free block: 55576928 B) - https://github.com/tenstorrent/tt-xla/issues/3388"
+
+  solar-10_7B/causal_lm/pytorch-10_7B_Instruct_v1.0-single_device-inference:
+    arch_overrides:
+      p150:
+        status: EXPECTED_PASSING
