--- a/.github/workflows/manual-update-durations.yml
+++ b/.github/workflows/manual-update-durations.yml
@@ -129,18 +129,25 @@ jobs:
           echo "Containers started on all hosts"
           echo ""
 
-      - name: Check /workspace contents in containers
+      - name: Make remote_docker.sh executable
         run: |
-          echo "=== Checking /workspace directory in containers ==="
+          chmod +x tests/torch/multi_host/experimental/remote_docker.sh
+
+      - name: Container-to-container SSH smokecheck
+        run: |
+          echo "=== Container-to-container SSH smokecheck ==="
+          echo ""
+          echo "Using mpirun with remote_docker.sh as plm_rsh_agent to test container-to-container connectivity"
           echo ""
 
           mpirun --hostfile /etc/mpirun/hostfile \
             --mca btl_tcp_if_exclude docker0,lo \
+            --mca plm_rsh_agent ${{ github.workspace }}/tests/torch/multi_host/experimental/remote_docker.sh \
             --tag-output \
-            bash -c 'docker exec multihost-poc ls -la /workspace'
+            bash -c 'echo "Hostname: $(hostname)"; if [ -f /.dockerenv ]; then echo "Running in container: YES"; else echo "Running in container: NO"; fi'
 
           echo ""
-          echo "/workspace check complete"
+          echo "Container-to-container SSH smokecheck complete"
           echo ""
 
       - name: Verify containers via mpirun
@@ -152,7 +159,7 @@ jobs:
           mpirun --hostfile /etc/mpirun/hostfile \
             --mca btl_tcp_if_exclude docker0,lo \
             --tag-output \
-            bash -c 'echo "=== $(hostname) ==="; docker ps --filter name=multihost-poc' | base64 -w 0
+            bash -c 'echo "=== $(hostname) ==="; docker ps --filter name=multihost-poc'
           echo ""
           echo ""
 
