--- a/.github/workflows/pr-main.yml
+++ b/.github/workflows/pr-main.yml
@@ -92,6 +92,9 @@ jobs:
       skip-device-perf: false
       perf_regression_check: false
       test_filter: resnet,llama_3_1_8b_instruct,qwen_3_4b_embedding
+      should_build_wheel: false
+      artifact_release_run_id: ${{ needs.build-ttxla-release.outputs.artifacts_run_id }}
+      wheel_release_artifact_name: ${{ needs.build-ttxla-release.outputs.wheel_artifact_name }}
 
   perf-benchmark-llmbox:
     if: needs.inspect-changes.outputs.skip-build-and-test == 'false' && needs.inspect-changes.outputs.only-run-forge-models != 'true' && vars.RUN_PERF_ON_UPLIFT == 'true'  && github.event_name == 'pull_request' && contains(github.event.pull_request.labels.*.name, 'uplift-mlir')
@@ -104,6 +107,9 @@ jobs:
       skip-device-perf: false
       perf_regression_check: false
       test_filter: test_llama_3_1_70b_tp
+      should_build_wheel: false
+      artifact_release_run_id: ${{ needs.build-ttxla-release.outputs.artifacts_run_id }}
+      wheel_release_artifact_name: ${{ needs.build-ttxla-release.outputs.wheel_artifact_name }}
 
   test_forge_models_push:
     if: needs.inspect-changes.outputs.skip-build-and-test == 'false'
