--- a/.github/workflows/manual-test.yml
+++ b/.github/workflows/manual-test.yml
@@ -5,69 +5,52 @@ name: Run Test
 
 on:
   workflow_dispatch:
-    inputs:
-      test_suite:
-        description: 'Test suite preset options or custom'
-        required: true
-        type: choice
-        options:
-          - 'basic-test.json'
-          - 'basic-test-nightly.json'
-          - 'model-test-push.json'
-          - 'model-test-full.json'
-          - 'on-pr.json'
-          - 'schedule-nightly.json'
-          - 'model-test-passing.json'
-          - 'model-test-xfail.json'
-          - 'model-test-experimental.json'
-          - 'model-test-training-xfail-weekly.json'
-          - 'model-test-extended.json'
-          - 'mlir-uplift-qualification.json'
-          - 'model-test-passing-weekly.json'
-          - 'model-test-weekly.json'
-          - 'vllm-model-tests.json'
-          - 'vllm-model-tests-nightly.json'
-          - 'Custom'
-      test_suite_custom:
-        description: 'Custom test suite json'
-        required: false
-        type: string
-      mlir_override:
-        description: 'Git SHA of commit in tenstorrent/tt-mlir'
-        required: false
-        type: string
 
 permissions:
+  contents: write
   packages: write
   checks: write
-
-run-name: 'Test ( Suite: ${{ inputs.test_suite }} )'
+  pull-requests: write
+  id-token: write
+  actions: write
 
 jobs:
   build-image:
     uses: ./.github/workflows/call-build-docker.yml
     secrets: inherit
-    with:
-      mlir_override: ${{ inputs.mlir_override }}
 
-  build-ttxla:
-    needs: build-image
+  build-ttxla-release:
     uses: ./.github/workflows/call-build.yml
+    name: "Build tt-xla release"
     secrets: inherit
+    needs: [ build-image ]
     with:
       docker_image: ${{ needs.build-image.outputs.docker-image }}
-      mlir_override: ${{ inputs.mlir_override }}
 
-  test:
-    if: success() && !cancelled() && inputs.preset != 'tt_forge_models'
-    uses: ./.github/workflows/call-test.yml
-    needs: [ build-image, build-ttxla]
+  perf-benchmark-n150:
+    needs: [ build-image, build-ttxla-release ]
+    uses: ./.github/workflows/manual-benchmark.yml
     secrets: inherit
     with:
-      test_suite: ${{ inputs.test_suite }}
-      test_suite_custom: ${{ inputs.test_suite_custom }}
-      docker_image: ${{ needs.build-image.outputs.docker-image-base }}
-      artifact_release_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
-      wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
-      wheel_release_vllm_tt_artifact_name: ${{ needs.build-ttxla.outputs.wheel_release_vllm_tt_artifact_name }}
-      alchemist_artifact_name: ${{ needs.build-ttxla.outputs.alchemist_artifact_name }}
+      runs-on-filter: n150
+      sh-runner: false
+      skip-device-perf: false
+      perf_regression_check: false
+      test_filter: resnet,llama_3_1_8b_instruct,qwen_3_4b_embedding
+      should_build_wheel: false
+      artifact_release_run_id: ${{ needs.build-ttxla-release.outputs.artifacts_run_id }}
+      wheel_release_artifact_name: ${{ needs.build-ttxla-release.outputs.wheel_artifact_name }}
+
+  perf-benchmark-llmbox:
+    needs: [ build-image, build-ttxla-release ]
+    uses: ./.github/workflows/manual-benchmark.yml
+    secrets: inherit
+    with:
+      runs-on-filter: n300-llmbox
+      sh-runner: false
+      skip-device-perf: false
+      perf_regression_check: false
+      test_filter: test_llama_3_1_70b_tp
+      should_build_wheel: false
+      artifact_release_run_id: ${{ needs.build-ttxla-release.outputs.artifacts_run_id }}
+      wheel_release_artifact_name: ${{ needs.build-ttxla-release.outputs.wheel_artifact_name }}
